Fix z-index of date selectors on application approval popup

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -4,6 +4,10 @@
   body.scrolling-disabled-by-modal {
     overflow: hidden;
   }
+
+  body.scrolling-disabled-by-modal div[data-reach-popover] {
+    z-index: 1100;
+  }
 }
 
 .overlay {
